Prevent horizontol overflow on each box
On the waiter order pages the text can overflow the box, so to prevent
that i added the clear attribute css to move the text to next line
before it overflows horizontaly.

--- a/project/waiter/static/css/orderWaiter.css
+++ b/project/waiter/static/css/orderWaiter.css
@@ -94,3 +94,9 @@ transition: background-position 0.3s ease-in-out;
 .updatestatus:hover{
 background-position: bottom;
 }
+
+.food-text {
+  /* Move text to next line instead of overflowing the box
+  horiziontaly */
+  clear: left;
+}
